# scraping-playwright

./: README.md  pyproject.toml  scrape.py
.devcontainer/: devcontainer.json
